Update install, antiair, midscreen, recommended, and matchup note pages

--- a/antiairs.html
+++ b/antiairs.html
@@ -10,7 +10,7 @@
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Antiairs</h1>
 		
-		<h1>Midscreen Meterless Antiairs</h1>
+		<h1>Midscreen Antiairs</h1>
 		<h2>Midscreen Meterless Antiair</h2>
 		<code>2H (counterhit) > 236H~4 > run forward > 5HHH > 623H > j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -25,12 +25,27 @@
 		</video>
 		<p>This 2H counterhit combo tacks on a bit more damage but costs you your seal setup, unless you reach the corner and wallbounce with 214H, where it becomes a no-strings-attached improvement over the previous combo.</p>
 		
+		<h2>Midscreen Meterless Antiair (Reaches Corner, Autocombo Edition)</h2>
+		<code>2H (counterhit) > 236H~4 > run forward > 5HHH > 214H > 623H > j.22H</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-midscreen-to-corner.mp4"/>
+		</video>
+		<p>An alternate 2H midscreen-to-corner combo with a tiny bit more corner carry. Notably works from roundstart position.</p>
+		
 		<h2>Midscreen Meterless Antiair (No Counterhit)</h2>
 		<code>2H > 236H~8 > 214M</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-meterless-no-counter.mp4"/>
 		</video>
 		<p>As mentioned earlier, low non-counter hits can be converted with stop tornado in the same way as counterhit combos. However off high non-counter hits it's difficult to convert into a full combo without meter. This is a nice consolation combo that gives good carry and mediocre oki.</p>
+		
+		<h2>Midscreen Metered Antiair (No Counterhit)</h2>
+		<code>2H > 236H~8 > run forward > 66H > 214U > 5HH > 623H > j.22H</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-antiair-66h.mp4"/>
+		</video>
+		<p>With 214U midscreen wallbounce removed in patch 2.20, it's rare to spend meter on antiair combos. The main appeal of this route is the corner carry, which slightly exceeds that of the meterless routes - you'll get corner wallbounce from a little bit past roundstart.</p>
+		<p>Often need to delay the 5HH to get close H. If you press too early and get f.H it doesn't really matter - you just lose a small amount of damage.</p>
 		
 		<h1>Corner Antiairs</h1>
 		<h2>Corner Antiair</h2>
