--- a/install.html
+++ b/install.html
@@ -13,20 +13,50 @@
 		<p>It opens up the ability to throw bait from anywhere, safely buffer full combos behind your lights, and move around in ways that are harder to predict. You can threaten airdash counterpoke from any position, and you can convert any hit into a corner safejump.</p>
 		<p>Install can be particularly worth pressing when the enemy is one hit from death, but super won't be enough to kill; or, when you get reset to neutral and one more confirm will win.</p>
 		
-		<h2>Install Setup Safejump</h2>
-		<code>(starter) > 214H > 2M > 236H > (delay)2H > install > 623H > j.H > rejump j.H (> j.22H > 6U whiff > j.M safejump)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-setup.mp4"/>
-		</video>
-		<p>Safejump setup that activates install in the middle. This isn't necessary, or even necessarily encouraged - you could just save your meter, and pop install if you get reset to neutral. But if you know you want to install this is a strong way to activate.</p>
+		<h1>Install Setups</h1>
+		<p>Combo routes that activate install in the middle. This isn't necessary, or even necessarily encouraged. You could just save your meter and pop install if you get reset to neutral - it's unpunishable as long as you aren't point-blank. But if you know you want to install in advance (for the defensive properties, or maybe just for fun) the following are several different ways to activate.</p>
 		
-		<h2>Alternate Install Setup Safejump</h2>
+		<h2>Install Setup Safejump</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > 2H (> install > j.6U > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-setup-alt.mp4"/>
 		</video>
-		<p>Alternate (easier) install setup which doesn't require your seal cooldown but costs juice directly. Can be notably useful when you don't have the 100 meter until the end of the combo. Somewhat frequently baits a DP response because it doesn't look like a safejump.</p>
+		<p>The easiest install safejump combo with the fewest restrictions. Common starter, doesn't require seal cooldown, and activates at the very end so meter is more lenient. The downsides are that the safejump costs juice directly and it doesn't set up seals, but it's a super consistent backup route if you can't route into anything better. Somewhat frequently baits a DP response because it doesn't look like a safejump.</p>
 		
+		<h2>Install Seal Setup Safejump</h2>
+		<code>(starter) > 214H > 2M > 236H > (delay)2H > install > 623H > j.H > rejump j.H (> j.22H > 6U whiff > j.M safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-setup.mp4"/>
+		</video>
+		<p>This is the "best" install activation route in that it leaves the most seals on board, but it's also a lot more specific than it sounds. You need to have seal cooldown up and you need to build the meter early in the combo. These conditions are a little rarer than you expect. It's also more difficult to execute than the previous combo. Your reward for hitting it is a safejump that leaves behind 3 seals.</p>
+		<p>Though it's the best install setup in theory, it does have the worst possible seal cooldown rotation, so if you want to make full use of single seals for install movement it can be a little awkward.</p>
+		
+		<h2>623H Install Seal Setup Safejump</h2>
+		<code>(starter) > 623H > j.214H > j.22H > j.2U > 5H > 236H~8 > 2H > install > 2H (> 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/j.214h-install.mp4"/>
+		</video>
+		<p>Another three seal safejump route. Broadly similar to the previous combo (in outcome, not in routing) - in this one, you need your seal cooldown even sooner, but can afford to wait until the end to build the meter. The starter being more specific is the main downside, so you have even fewer opportunities to route into it.</p>
+		
+		<h2>623H Install Setup Safejump/Empty Low</h2>
+		<code>(starter) > 623H > j.H > rejump j.H > j.214H > 5H > 236H~4 > 2H > install > 2H (> delay cancel 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/rejump-j.214h-install.mp4"/>
+		</video>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/rejump-j.214h-install-empty-low.mp4"/>
+		</video>
+		<p>Sets up zero seals, so you should favor other routes in general, but if you don't have the cooldown this is slightly better than the first route listed because it doesn't cost any juice for the safejump.</p>
+		<p>Do 236H~4 > delay 5U for the safejump, 236H (no followup) > instant 5U for the empty low. If you have seals setup elsewhere the 5U will send you off on a grand adventure, so you'll need to spend the juice for 8U/9U instead. The timing is the same.</p>
+		
+		<h2>Install Seal Tornado Setup</h2>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.9U > (delay) j.2U > 2H > install > 2H (> 236L~4)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-install.mp4"/>
+		</video>
+		<p>Install tornado setup, particularly useful against parry characters. Unfortunately it's also the most difficult route on this list - the j.22H and 9U2U timings are very awkward. Not so hard that you can't hit it in a match, but hard enough that you can drop it.</p>
+		
+		<h1>Install Combos</h1>
 		<h2>Install Midscreen</h2>
 		<code>(starter) > 623L > 6U > 2M > 236H > dash forward > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -61,7 +91,7 @@
 		<p>Funny corner steal. Reactable, but most people aren't ready for Grimnir to steal the corner and are not holding the block button so it hits a decent amount. You're +3 so even if they react they can't mash. Can also occasionally bait a reversal by crossing up the opponent's input. Fairly easy to execute since the muscle memory transfers directly from the standard meterless safejump route. You can also go into this from the standard install midscreen route, which is shown in the latter half of the video.</p>
 		
 		<h2>Install Ball Loop</h2>
-		<code>j.214M > 8U > j.214L > 8U > j.214L > 8U > j.214L (> 8U whiff > j.H safejump)</code><br class="combo"/>
+		<code>j.214M > 8U > j.214L > 8U > j.214L > 8U > j.214L (> 8U whiff > j.L safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-ball-loop.mp4"/>
 		</video>
