--- a/midscreen.html
+++ b/midscreen.html
@@ -22,6 +22,7 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-corner-wallbounce.mp4"/>
 		</video>
 		<p>Your easiest (actual) midscreen combo. You need to be somewhat close to the corner to get the wallbounce with 214U. Can end in whatever you feel like if you don't want to spend the additional 25% for the metered safejump.</p>
+		<p>Even if you don't reach the corner for wallbounce this will probably be your go-to midscreen combo; the others either require more specific starters or are prohibitively expensive. In this case the combo ends after the 214U, and you can either use the knockdown to set up seals or run up and take oki with 66L.</p>
 		
 		<h1>Midscreen 623L</h1>
 		<p>Grimnir's midscreen combos took a significant hit in the 2.20 patch, so it's more important than ever to learn to make the most of your seals midscreen. These next few combos show ways to convert out of less convenient seal placements.</p>
@@ -33,7 +34,7 @@
 		<p>When you hit your starter but don't quite reach your seal for a gale dash extension, you can use the forward movement from light spin to convert into a full combo. If you think you'll reach the corner with 214H, this sets up for a meterless safejump. Need to eyeball the delay on the 623H based on distance from corner; sending it as early as possible won't let you connect j.H after. If you aren't comfortable with guessing the timing for the safejump, you can just do 5H > 623H > j.22H instead to set up seals. This is preferable to dropping the combo.</p>
 		
 		<h2>623L (no corner)</h2>
-		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214U > 2H > 623H > 22X</code><br class="combo"/>
+		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214U > 22X</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623l-no-corner.mp4"/>
 		</video>
@@ -47,28 +48,21 @@
 		<p>A similar concept with 623M. Less damage than the 623L route but keeps your tornado cooldown. Generally you don't get the choice of which route you use because it depends where your seals are, but on the rare occasions you do get to choose, that's your tradeoff.</p>
 		
 		<h2>623M (no corner)</h2>
-		<code>(starter) > 623M > j.3U > 5H > 236H~8 > 214U > 2H > 623H > 22X</code><br class="combo"/>
+		<code>(starter) > 623M > j.3U > 5H > 236H~8 > 214U > 22X</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623m-no-corner.mp4"/>
 		</video>
 		<p>Similar variant if you won't reach the corner with 214H.</p>
 		
 		<h1>Raging Strike Routes</h1>
-		<p>With the removal of midscreen 214U wallbounce in patch 2.20, Grimnir now needs to rely on raging strike to convert into meaningful combos midscreen. Listed next are a bunch of different options. However, always keep in mind the additional option of "don't do them" - your bravery points are very valuable, and it isn't always worth spending them to convert into a combo. Knowing when to spend and when to save is a skill in itself.</p>
+		<p>With the removal of midscreen 214U wallbounce in patch 2.20, Grimnir now needs to rely on raging strike to consistently convert into meaningful combos midscreen. Listed next are a bunch of different options. However, always keep in mind the additional option of "don't do them" - your bravery points are very valuable, and it isn't always worth spending them to convert into a combo. Knowing when to spend and when to save is a skill in itself.</p>
 		
 		<h2>Raging Strike Seal Setup</h2>
 		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > (walk back) delay 623H (> j.22H)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-seal-setup.mp4"/>
 		</video>
-		<p>Puts the opponent's back against the wall and sets up seals. Great general-purpose option if you want to spend for it.</p>
-		
-		<h2>Raging Strike Safejump</h2>
-		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > j.H > j.214L > delay 9U (> j.H safejump)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-safejump.mp4"/>
-		</video>
-		<p>Easy midscreen safejump setup. Wait on the second 9U until after you "land" from the j.214L.</p>
+		<p>Puts the opponent's back against the wall and sets up seals. Great general-purpose option if you want to spend for it. The 623H is slightly awkward but consistent with practice.</p>
 		
 		<h2>Raging Strike Tornado Carry</h2>
 		<code>(starter) > raging strike > raging chain > 22U > 5HH > 236H > delay 6U6U > 5M (> 214L whiff)</code><br class="combo"/>
@@ -84,6 +78,13 @@
 		</video>
 		<p>Excellent midscreen-to-corner seal safejump setup. Enables Grimnir's scary corner offense from as far as 60% of the stage.</p>
 		
+		<h2>Raging Strike Safejump</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > j.H > j.214L > delay 9U (> j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-safejump.mp4"/>
+		</video>
+		<p>Easy midscreen safejump setup. Wait on the second 9U until after you "land" from the j.214L.</p>
+		
 		<h2>Raging Strike Run Under</h2>
 		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > 2H > 22L > run forward</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -92,23 +93,30 @@
 		<p>Funny gimmick sideswap that very obviously looks like a sideswap. Has non-gimmick merit as one of the only raging strike routes to leave you plus in the opponent's face *and* on top of a seal.</p>
 		
 		<h1>Midscreen 22U</h1>
-		<p>Only works from autocombo starter because other starters have more pushback, so it's pretty rare that you have the opportunity to use one of these in a match. (That's why they're at the bottom of the page where no one will look.)</p>
+		<p>Mostly only works from autocombo starter because other starters have more pushback, so it's pretty rare that you have the opportunity to use one of these in a match. (That's why they're at the bottom of the page where no one will look.)</p>
 		
-		<h2>Midscreen 22U Seal Setup</h2>
-		<code>autocombo > 22U > f.H > 623L > 6U > 5M > 9U > delay j.3U > 2H > 623H > j.22H</code><br class="combo"/>
+		<h2>Midscreen 22U Corner-to-Corner (623L)</h2>
+		<code>autocombo > 22U > f.H > 623L > 6U > 5M > 6U > 2M > 236H > run forward > 214H > run forward > 623H > j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-seal-setup.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/22u-corner-to-corner-623l.mp4"/>
 		</video>
-		<p>Sends the opponent to the corner and sets up seals. If the starter was more consistent this might have been our go-to midscreen combo. Alas.</p>
+		<p>Easy and consistent corner-to-corner seal setup route. Midscreen 22U combos like this cost the full 50% (no refund) since you have to cancel into the special, but if you have the rare opportunity to do this combo it's probably worth it - Grimnir is a much much scarier character when he has seals on you in the corner.</p>
+		
+		<h2>Midscreen 22U Corner-to-Corner (66L)</h2>
+		<code>autocombo > 22U > 66L > 5MM > 6U > 5HH > 6U > 5HHH > 236H~8 > 214U > 2H > 623H > 5H > 214H > 5H > 22H</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/22u-corner-to-corner-hard.mp4"/>
+		</video>
+		<p>Significantly more damage than the previous combo, but costs 25% more meter, and the 66L is a difficult 2f link. If you're confident in your execution and have the meter to spend you can consider using this.</p>
 		
 		<h2>Midscreen 22U Safejab</h2>
-		<code>autocombo > 22U > f.H > 623L > 6U > delay 6U > MMM (> 6U whiff > 214L)</code><br class="combo"/>
+		<code>autocombo > 22U > f.H > 623L > 6U > delay 6U > MMM (> 214M whiff)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-safejab.mp4"/>
 		</video>
 		<p>Leaves you +6 in your opponent's face, setting up a perfectly timed safejab. Safejabs lose to ultimate DPs but are safe to any other form of DP.</p>
 		
-		<h2>Midscreen 22U Corner-to-Corner</h2>
+		<h2>Midscreen 22U Corner-to-Corner Safejump</h2>
 		<code>autocombo > 22U > f.H > 623L > 6U > 5M > 9U > delay j.3U > 5H > 214H > run forward > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-corner-to-corner.mp4"/>
@@ -120,10 +128,10 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-crouching.mp4"/>
 		</video>
-		<p>Slightly easier than the previous combo but an even rarer hit.</p>
+		<p>Crouch-exclusive midscreen 22U confirm. Realistically you're probably never getting this hit in a match, but if you do you can get a lot of damage out of this route.</p>
 		
 		<h2>Airdash 22U Confirm</h2>
-		<code>j.6U > j.L > 22U > microwalk 5HHH > 6U > 5HH > 6U > 5HHH > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
+		<code>j.6U > j.L (or j.M) > 22U > microwalk 5HHH > 6U > 5HH > 6U > 5HHH > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/airdash-22u-confirm.mp4"/>
 		</video>
