--- a/recommended.html
+++ b/recommended.html
@@ -19,12 +19,13 @@
 		</video>
 		<p>This is the easiest safejump setup Grimnir has access to. Replace the 22U at the end with super if you think it will kill. If you don't want to spend the meter, you can do 623H > 5HHH > 22H to set up seals without a safejump.</p>
 		
-		<h2>Easy Midscreen Safejump</h2>
-		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > j.H > j.214L > delay 9U (> j.H safejump)</code><br class="combo"/>
+		<h2>Easy Midscreen Combo</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-safejump.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-corner-wallbounce.mp4"/>
 		</video>
-		<p>Consistent midscreen combo, though it costs a bravery point. Wait on the second 9U until after you "land" from the j.214L. Grimnir's non-raging strike midscreen combos got shot in patch 2.20 so raging strike is the most consistent way to convert midscreen hits now.</p>
+		<p>As Grimnir you should plan on spending meter for your midscreen hits. This combo is very consistent and lets you set up seals to start spooky Grimnir offense. Note that it only works from about midscreen - as of patch 2.20, 214U only gives wallbounce in the corner.</p>
+		<p>Even if you don't reach the corner this will probably still be your go-to midscreen combo; the others either require more specific starters or are prohibitively expensive. In this case the combo ends after the 214U, and you can either use the knockdown to set up seals or run up and take oki with 66L.</p>
 		
 		<h2>Easy Antiair</h2>
 		<code>2H (counterhit) > 236H~4 > run forward > 5HHH > 623H > j.22H</code><br class="combo"/>
@@ -43,12 +44,13 @@
 		</video>
 		<p>Not really a safejump, but may as well be: this setup is safe to DP and gives you free plus frames. As a bonus it also works against parry characters. The downsides are that it doesn't set up seals and it does pretty disappointing damage by Grimnir standards, but we can fix these flaws in later routes.</p>
 		
-		<h2>Midscreen-to-Corner Safejump</h2>
-		<code>(starter) > raging strike > raging chain > 22U > 5HH > 236H > run forward > 214H > 2H (> 5U > j.H safejump)</code><br class="combo"/>
+		<h2>Midscreen 623L</h2>
+		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-tornado-carry-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623l-reach-corner.mp4"/>
 		</video>
-		<p>Excellent midscreen-to-corner seal safejump setup. Enables Grimnir's scary corner offense from as far as 60% of the stage.</p>
+		<p>Grimnir's midscreen combos took a significant hit in the 2.20 patch, so it's more important than ever to learn to make the most of your seals midscreen. It's easy to extend combos if you're standing directly on a seal, but less obvious how to make use of them when you're standing in front of one. This is one way, and the one you'll use the most often: leverage the forward momentum from 623L to convert into a full combo.</p>
+		<p>If you think you'll reach the corner with 214H, this sets up for a meterless safejump. Need to eyeball the delay on the 623H based on distance from corner; sending it as early as possible won't let you connect j.H after. If you aren't comfortable with guessing the timing for the safejump, you can just do 5H > 623H > j.22H instead to set up seals. This is preferable to dropping the combo.</p>
 		
 		<h2>Camera 50/50</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
