Fix notation error in ball whiff safejump

--- a/corner-safejumps.html
+++ b/corner-safejumps.html
@@ -96,7 +96,7 @@
 		<p>Up-down-up-down-up-down. Very fun meterless safejump. You need to delay the 5U cancel out of 2H until one of the late cancel frames or your j.H will miss.</p>
 		
 		<h2>Ball Whiff Safejump</h2>
-		<code>(starter) > 623M > j.1U > 2H > 214M > 22U > 8U > 5H > j.214H (> j.L safejump)</code><br class="combo"/>
+		<code>(starter) > 623M > j.1U > 2H > 214M > 22U > 8U > j.H > j.214H (> j.L safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/ball-whiff-safejump.mp4"/>
 		</video>
